// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`design system snapshots > matches snapshot: Primary 1`] = `
<DocumentFragment>
  <button
    class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2"
  >
    Primary action
  </button>
</DocumentFragment>
`;

exports[`design system snapshots > matches snapshot: Sizes 1`] = `
<DocumentFragment>
  <div
    style="display: flex; gap: var(--ds-space-sm); padding: var(--ds-space-md);"
  >
    <button
      class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-9 rounded-md px-3"
    >
      Small
    </button>
    <button
      class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2"
    >
      Default
    </button>
    <button
      class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-11 rounded-md px-8"
    >
      Large
    </button>
    <button
      aria-label="Icon button"
      class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-10 w-10"
    >
      🚀
    </button>
  </div>
</DocumentFragment>
`;

exports[`design system snapshots > matches snapshot: Variants 1`] = `
<DocumentFragment>
  <div
    style="display: grid; gap: var(--ds-space-sm); max-width: 620px;"
  >
    <div
      class="relative w-full rounded-lg border p-4 [&>svg~*]:pl-7 [&>svg+div]:translate-y-[-3px] [&>svg]:absolute [&>svg]:left-4 [&>svg]:top-4 border-green-500/50 text-green-700 dark:border-green-500 [&>svg]:text-green-700"
      role="alert"
    >
      <h5
        class="mb-1 font-medium leading-none tracking-tight"
      >
        Ready
      </h5>
      <div
        class="text-sm [&_p]:leading-relaxed"
      >
        The ingestion pipeline is healthy and ready for new documents.
      </div>
    </div>
    <div
      class="relative w-full rounded-lg border p-4 [&>svg~*]:pl-7 [&>svg+div]:translate-y-[-3px] [&>svg]:absolute [&>svg]:left-4 [&>svg]:top-4 border-yellow-500/50 text-yellow-700 dark:border-yellow-500 [&>svg]:text-yellow-700"
      role="alert"
    >
      <h5
        class="mb-1 font-medium leading-none tracking-tight"
      >
        Heads up
      </h5>
      <div
        class="text-sm [&_p]:leading-relaxed"
      >
        Analyst coverage dips below target during APAC hours.
      </div>
    </div>
    <div
      class="relative w-full rounded-lg border p-4 [&>svg~*]:pl-7 [&>svg+div]:translate-y-[-3px] [&>svg]:absolute [&>svg]:left-4 [&>svg]:top-4 border-destructive/50 text-destructive dark:border-destructive [&>svg]:text-destructive"
      role="alert"
    >
      <h5
        class="mb-1 font-medium leading-none tracking-tight"
      >
        Action required
      </h5>
      <div
        class="text-sm [&_p]:leading-relaxed"
      >
        Anomalous download behavior detected across 3 endpoints.
      </div>
    </div>
  </div>
</DocumentFragment>
`;
